# TidaLuna-Plugins

./: .gitignore  README.md  package.json  pnpm-workspace.yaml
.github/workflows/: build.yml
plugins/tidal-shuffle-repeat/: README.md  package.json
plugins/tidal-shuffle-repeat/src/: Settings.tsx  arm.native.ts  index.ts  native-bin.ts
smtc-bridge/: Cargo.toml  build.bat  build32.bat  embed.ps1  package.json
smtc-bridge/src/: lib.rs
