[package]
name = "smtc-bridge"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"

[dependencies.windows]
version = "0.52"
features = [
    "Foundation",
    "Foundation_Collections",
    "Media",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_WinRT",
]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
